--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 jobs:
   proofreading_job:
     docker:
-      - image: circleci/node
+      - image: cimg/node:lts
     steps:
       - checkout
       - run:
