--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,20 +8,20 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "textlintをインストールする"
-          command: npm install --save-dev textlint textlint-rule-no-mix-dearu-desumasu
+          name: "Install textlint"
+          command: npm install --save-dev textlint textlint-rule-common-misspellings
       - run:    
-          name: "依存モジュールをインストールする"
+          name: "Install dependent module"
           command: npm install
       - run:
-          name: "reviewdogをインストールする"
+          name: "Install reviewdog"
           command: |
             curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh| sh -s
       - run: # (d1)
-          name: "textlintをREADME.mdに対して実行する"
+          name: "Execute textlint for README.md"
           command: npx textlint -f checkstyle README.md >> .textlint.log
       - run: # (d2)
-          name: "reviewdogを実行する"
+          name: "Execute reviewdog"
           when: on_fail
           command: |
             cat .textlint.log | ./bin/reviewdog -f=checkstyle -name="textlint" -reporter="github-pr-review"
