--- a/.textlintrc
+++ b/.textlintrc
@@ -1,5 +1,11 @@
 {
-  "rules": {
-    "textlint-rule-no-mix-dearu-desumasu": true
-  }
+    "rules": {
+        "common-misspellings": {
+            // Misspellings to be ignored (case-insensitive)
+            "ignore": [
+                "isnt",
+                "yuo",
+            ]
+        }
+    }
 }
