--- a/.textlintrc
+++ b/.textlintrc
@@ -1,11 +1,5 @@
 {
     "rules": {
-        "common-misspellings": {
-            // Misspellings to be ignored (case-insensitive)
-            "ignore": [
-                "isnt",
-                "yuo",
-            ]
-        }
+        "common-misspellings": true
     }
 }
