--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,13 @@ jobs:
       - run: # (d1)
           name: "Execute textlint for README.md"
           command: npx textlint --rule common-misspellings README.md >> .textlint.log
+      - run:
+          name: "Update PATH and Define Env Var at Runtime"
+          command: |
+            echo 'export CIRCLE_PROJECT_REPONAME=reviewdog' >> $BASH_ENV
+            echo 'export CIRCLE_PROJECT_USERNAME=hogehoge' >> $BASH_ENV
+            echo "export CIRCLE_SHA1 =$CIRCLE_SHA1" >> $BASH_ENV
+            source $BASH_ENV
       - run: # (d2)
           name: "Execute reviewdog"
           when: on_fail
