--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
           command: |
             echo 'export CIRCLE_PROJECT_REPONAME=reviewdog' >> $BASH_ENV
             echo 'export CIRCLE_PROJECT_USERNAME=hogehoge' >> $BASH_ENV
+            echo $CIRCLE_PR_NUMBER
             source $BASH_ENV
       - run: # (d1)
           name: "Execute textlint for README.md"
