set CIRCLE_PR_NUMBER

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,9 +20,7 @@ jobs:
       - run:
           name: "Update PATH and Define Env Var at Runtime"
           command: |
-            echo 'export CIRCLE_PROJECT_REPONAME=reviewdog' >> $BASH_ENV
-            echo 'export CIRCLE_PROJECT_USERNAME=hogehoge' >> $BASH_ENV
-            echo $CIRCLE_PR_NUMBER
+            echo 'export CIRCLE_PR_NUMBER=1' >> $BASH_ENV
             source $BASH_ENV
       - run: # (d1)
           name: "Execute textlint for README.md"
