--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,11 +17,6 @@ jobs:
           name: "Install reviewdog"
           command: |
             curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh| sh -s
-      - run:
-          name: "Update PATH and Define Env Var at Runtime"
-          command: |
-            echo 'export CIRCLE_PR_NUMBER=10' >> $BASH_ENV
-            source $BASH_ENV
       - run: # (d1)
           name: "Execute textlint for README.md"
           command: npx textlint --rule common-misspellings README.md >> .textlint.log
@@ -30,6 +25,7 @@ jobs:
           when: on_fail
           command: |
             cat .textlint.log | ./bin/reviewdog -f=checkstyle -name="textlint" -reporter="github-pr-review"
+            echo $CIRCLE_PULL_REQUEST
 
 workflows:
   version: 2
