--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,10 @@ jobs:
       - run: # (d2)
           name: "Execute reviewdog"
           when: on_fail
+          environment:
+            CIRCLE_PULL_REQUEST: 100
           command: |
             cat .textlint.log | ./bin/reviewdog -f=checkstyle -name="textlint" -reporter="github-pr-review"
-            echo $CIRCLE_PULL_REQUEST
 
 workflows:
   version: 2
