--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
           name: "Execute reviewdog"
           when: on_fail
           environment:
-            CIRCLE_PULL_REQUEST: 100
+            CIRCLE_PR_NUMBER: 100
           command: |
             cat .textlint.log | ./bin/reviewdog -f=checkstyle -name="textlint" -reporter="github-pr-review"
 
