--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,8 @@ jobs:
           when: on_fail
           command: |
             cat .textlint.log | ./bin/reviewdog -f=checkstyle -name="textlint" -reporter="github-pr-review" -guess
+            echo $CI_REPO_OWNER
+            echo $CI_REPO_NAME
 
 workflows:
   version: 2
