--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
             CI_REPO_OWNER: "Yuhta28"
             CI_REPO_NAME: "textlint-reviewdog-sample"
             CI_PULL_REQUEST: "14"
+            CI_COMMIT: $(git rev-parse HEAD)
           command: |
             cat .textlint.log | ./bin/reviewdog -f=checkstyle -name="textlint" -reporter="github-pr-review"
 workflows:
