--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,10 @@ jobs:
           environment:
             CI_REPO_OWNER: "Yuhta28"
             CI_REPO_NAME: "textlint-reviewdog-sample"
-            CI_PULL_REQUEST: "14"
+            #CI_PULL_REQUEST: "14"
             CI_COMMIT: $(git rev-parse HEAD)
           command: |
-            cat .textlint.log | ./bin/reviewdog -f=checkstyle -name="textlint" -reporter="github-pr-review"
+            cat .textlint.log | ./bin/reviewdog -f=checkstyle -name="textlint" -reporter="github-pr-review" -guess
 workflows:
   version: 2
   proofreading:
