--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,12 @@ jobs:
       - run: # (d1)
           name: "Execute textlint for README.md"
           command: npx textlint --rule common-misspellings README.md >> .textlint.log
+      - run:
+          name: Define CIRCLE_PR_NUMBER Environment Variable at Runtime
+          when: on_fail
+          command: |
+            echo 'export CIRCLE_PR_NUMBER =9999' >> $BASH_ENV
+            source $BASH_ENV
       - run: # (d2)
           name: "Execute reviewdog"
           when: on_fail
