--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
           name: Define CIRCLE_PR_NUMBER Environment Variable at Runtime
           when: on_fail
           command: |
-            echo 'export CIRCLE_PR_NUMBER =9999' >> $BASH_ENV
+            echo "export CIRCLE_PR_NUMBER=9999" >> $BASH_ENV
             source $BASH_ENV
       - run: # (d2)
           name: "Execute reviewdog"
