--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,13 @@ jobs:
           name: Define CIRCLE_PR_NUMBER Environment Variable at Runtime
           when: on_fail
           command: |
-            echo "export CIRCLE_PULL_REQUEST=9999" >> $BASH_ENV
+            echo "export CI_REPO_OWNER=Yuhta28" >> $BASH_ENV
+            echo "export CI_REPO_NAME=textlint-reviewdog-sample" >> $BASH_ENV
+            echo "export CIRCLE_PULL_REQUEST=1" >> $BASH_ENV
+            echo "export CI_COMMIT=$(git rev-parse HEAD)" >> $BASH_EMV
             source $BASH_ENV
             echo $CIRCLE_PULL_REQUEST
+            echo $CI_COMMIT
       - run: # (d2)
           name: "Execute reviewdog"
           when: on_fail
