--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           environment:
             CIRCLE_PR_NUMBER: 5
           command: |
-            echo $CIRCLE_PR_NUMBER
+            cat .textlint.log
             cat .textlint.log | ./bin/reviewdog -f=checkstyle -name="textlint" -reporter="github-pr-review"
 workflows:
   version: 2
