--- a/.github/workflows/textreview.yml
+++ b/.github/workflows/textreview.yml
@@ -1,36 +1,43 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: reviewdog
 
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches:
+      - master
   pull_request:
-    branches: [ master ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  reviewdog-github-check:
+    name: reviewdog (github-check)
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/setup-go@v2
+        with:
+          go-version: 1.14
+
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Install textlint
+        run:  'npm install --save-dev textlint textlint-rule-common-misspellings'
+      
+      - name: Install dependent module
+        run: npm install
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Install reviewdog
+        # use: reviewdog/action-setup@v1
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh| sh -s
+
+      - name: Execute textlint for README.md
+        run: |
+          npx textlint --rule common-misspellings README.md >> .textlint.log
+
+      - name: Run reviewdog
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          cat .textlint.log | ./bin/reviewdog -f=checkstyle -name="textlint" -reporter="github-pr-review"
