--- a/.github/workflows/textreview.yml
+++ b/.github/workflows/textreview.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: 1.14
+      - uses: actions/setup-node@v2
 
       - uses: actions/checkout@v2
 
