--- a/.github/workflows/textreview.yml
+++ b/.github/workflows/textreview.yml
@@ -38,6 +38,7 @@ jobs:
           npx textlint --rule common-misspellings README.md >> .textlint.log
 
       - name: Run reviewdog
+        if: always()
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
