--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
             curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh| sh -s
       - run: # (d1)
           name: "Execute textlint for README.md"
-          command: npx textlint --rule common-misspellings README.md >> .textlint.log
+          command: npx textlint -f checkstyle --rule common-misspellings README.md >> .textlint.log
                    
       - run: # (d2)
           name: "Execute reviewdog"
